Web Inspector: Network: collapse type filter scope bar into a single button to save space https://bugs.webkit.org/show_bug.cgi?id=235537
Reviewed by Patrick Angle.

* UserInterface/Views/NetworkTableContentView.js:
(WI.NetworkTableContentView):
* UserInterface/Views/NetworkTableContentView.css:
(.network-type-filter-scope-bar.default-item-selected:not(:hover)): Added.
(.network-type-filter-scope-bar.default-item-selected:hover): Added.



Canonical link: https://commits.webkit.org/246354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288469 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/NetworkTableContentView.css
@@ -23,6 +23,16 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+.network-type-filter-scope-bar.default-item-selected:not(:hover) {
+    --scope-bar-text-color-override: var(--text-color);
+    --scope-bar-background-color-override: transparent;
+    --scope-bar-border-color-override: transparent;
+}
+
+.network-type-filter-scope-bar.default-item-selected:hover {
+    --scope-bar-background-opacity-override: 0.5;
+}
+
 .content-view.tab.network > .content-browser > .navigation-bar .hierarchical-path .icon {
     margin-inline: 8px 4px;
 }
